# bootstrap_cmds

./: .gitignore  Makefile.am  README.md  configure.ac
compat/non_apple/mach/: boolean.h  kern_return.h  message.h  ndr.h  port.h  std_types.h
compat/non_apple/mach/machine/: vm_types.h
mig.xcodeproj/: project.pbxproj
migcom.tproj/: Makefile.am  error.c  mig.sh  type.h
migcom.tproj/xcode/: parser.h
